Change class from 'd-flex' to 'grow-1 d-flex'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="section">
             <div class="center">
                 <div class="d-flex-wrap gap-20">
-                    <div class="basis500 d-flex gap-20">
+                    <div class="basis500 grow-1 d-flex gap-20">
 
                         <div class="block-card">
                             <div class="mb-10 pd-d-10 border-b">
