--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <div class="">بالاترین قیمت امروز</div>
                                 <div class=""><span class="color-title font-size-1-5">۱۹،۴۹۵،۷۱۹</span> <span class="color-bright">تومان</span></div>
                             </div>
-                            <div class="mb-10">
+                            <div>
                                 <div class="">پایین‌ترین قیمت امروز</div>
                                 <div class=""><span class="color-title font-size-1-5">۱۹،۴۹۵،۷۱۹</span> <span class="color-bright">تومان</span></div>
                             </div>
@@ -59,7 +59,7 @@
                                 <div class="">بالاترین قیمت امروز</div>
                                 <div class=""><span class="color-title font-size-1-5">۱۹،۴۹۵،۷۱۹</span> <span class="color-bright">تومان</span></div>
                             </div>
-                            <div class="mb-10">
+                            <div>
                                 <div class="">پایین‌ترین قیمت امروز</div>
                                 <div class=""><span class="color-title font-size-1-5">۱۹،۴۹۵،۷۱۹</span> <span class="color-bright">تومان</span></div>
                             </div>
