--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 
                             <div class="d-flex gap-20">
                                 <div class="">
-                                    <div class="">بالاترین قیمت</div>
+                                    <div class="font-size-0-9">بالاترین قیمت</div>
                                     <div class=""><span class="font-size-1-2 color-title">۱۹،۴۹۵،۷۱۹</span> <span class="color-bright">تومان</span></div>
                                 </div>
                                 <div class="">
-                                    <div class="">پایین‌ترین قیمت</div>
+                                    <div class="font-size-0-9">پایین‌ترین قیمت</div>
                                     <div class=""><span class="font-size-1-2 color-title">۱۹،۴۹۵،۷۱۹</span> <span class="color-bright">تومان</span></div>
                                 </div>
                             </div>
