--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
 
                     </div>
-                    <div class="block-card basis500 chartbox">
+                    <div class="block-card d-flex-column just-between basis500 chartbox">
                         <div class="d-flex just-between align-center mb-10">
                             <div class="d-flex gap-10">
                                 <div class="mode-toggle">
