--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <body>
     <a href="#main-content" class="skip-link">رفتن به محتوای اصلی</a>
     <div class="main" id="main-content">
+        <div class="top-bar mb-30">
+            <div class="center d-flex just-between align-center">
+                <div class="logo"><img src="images/logo.svg" alt="طلا آنلاین" style="height: 32px;"></div>
+                <div class="d-flex align-center gap-10">
+                    <span class="live-pulse"></span>
+                    <span id="current-date" class="font-size-0-9 font-bold color-title">...</span>
+                </div>
+            </div>
+        </div>
         <div id="error-banner" class="center mb-20 d-none">
             <div class="error-container block-card">
                 <div class="error-icon">
@@ -26,19 +35,10 @@
                 <button id="reload-btn" class="btn btn-error" aria-label="تلاش مجدد برای بارگذاری اطلاعات">تلاش مجدد</button>
             </div>
         </div>
-        <div class="top-bar mb-30">
-            <div class="center d-flex just-between align-center">
-                <div class="logo"><img src="images/logo.svg" alt="طلا آنلاین" style="height: 32px;"></div>
-                <div class="d-flex align-center gap-10">
-                    <span class="live-pulse"></span>
-                    <span id="current-date" class="font-size-0-9 font-bold color-title">...</span>
-                </div>
-            </div>
-        </div>
         <div class="section">
             <div class="center">
                 <div class="d-flex-wrap gap-20">
-                    <div class="grow-1 d-flex-wrap gap-20">
+                    <div class="basis500 grow-1 d-flex gap-20">
 
                         <!-- Gold Summary -->
                         <div class="block-card" id="gold-summary">
