--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                             </div>
 
                             <div class="price-main mb-20">
-                                <div class="d-flex align-baseline gap-5">
+                                <div>
                                     <span class="color-title font-size-2-5 font-bold current-price skeleton">---</span>
-                                    <span class="color-bright font-size-0-9">تومان</span>
+                                    <span class="color-bright font-size-0-9 mr-5">تومان</span>
                                 </div>
                                 <div class="trend-badge-wrapper mt-5 d-flex align-center gap-10">
                                     <span class="trend-badge change-percent skeleton">---</span>
@@ -100,9 +100,9 @@
                             </div>
 
                             <div class="price-main mb-20">
-                                <div class="d-flex align-baseline gap-5">
+                                <div>
                                     <span class="color-title font-size-2-5 font-bold current-price skeleton">---</span>
-                                    <span class="color-bright font-size-0-9">تومان</span>
+                                    <span class="color-bright font-size-0-9 mr-5">تومان</span>
                                 </div>
                                 <div class="trend-badge-wrapper mt-5 d-flex align-center gap-10">
                                     <span class="trend-badge change-percent skeleton">---</span>
