--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="section">
             <div class="center">
                 <div class="d-flex-wrap gap-20">
-                    <div class="basis500 grow-1 d-flex gap-20">
+                    <div class="mob-scroll basis500 grow-1 d-flex gap-20">
 
                         <!-- Gold Summary -->
                         <div class="block-card price-card fade-in-up" id="gold-summary">
