--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
                     </div>
                     <div class="block-card d-flex-column just-between basis500 chartbox fade-in-up" style="animation-delay: 0.2s;">
-                        <div class="d-flex just-between align-center mb-10">
-                            <div class="d-flex gap-10">
+                        <div class="d-flex just-between align-start mb-10">
+                            <div class="d-flex-wrap gap-10">
                                 <div class="mode-toggle">
                                     <button id="gold-chart-btn" class="mode-btn active" aria-label="نمایش نمودار طلا">نمودار طلا</button>
                                     <button id="silver-chart-btn" class="mode-btn" aria-label="نمایش نمودار نقره">نمودار نقره</button>
