--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     </div>
                 </div>
 
-                <div class="block-card fade-in-up" style="animation-delay: 0.4s;">
+                <div class="block-card order-0 fade-in-up" style="animation-delay: 0.4s;">
                     <div id="coins-list">
                         <div class="coin-item skeleton" style="height: 60px; margin-bottom: 10px;"></div>
                         <div class="coin-item skeleton" style="height: 60px; margin-bottom: 10px;"></div>
